@@ -1,6 +1,7 @@
 Version 0.2.x -
 ----------------------------
 - New: added view files
+- New: added new class messages
 - Enh: changes in README
 
 
